--- a/packages/hask/package.json
+++ b/packages/hask/package.json
@@ -8,7 +8,7 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
-    "android:package:debug":"react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res && cd android && ./gradlew assembleDebug"
+    "android:package:debug": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res && cd android && ./gradlew assembleDebug"
   },
   "dependencies": {
     "acronym": "^1.0.0",
@@ -16,7 +16,8 @@
     "lib": "1.0.0",
     "react": "16.13.1",
     "react-native": "0.63.4",
-    "react-native-gifted-chat": "^0.16.3"
+    "react-native-gifted-chat": "^0.16.3",
+    "react-native-navigation": "^7.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
