--- a/packages/hask/android/app/build.gradle
+++ b/packages/hask/android/app/build.gradle
@@ -129,7 +129,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.appone"
+        applicationId "im.reaper.hask"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
