--- a/packages/hask/android/app/src/main/AndroidManifest.xml
+++ b/packages/hask/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.appone">
+  package="im.reaper.hask">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
