--- a/codemagic.yml
+++ b/codemagic.yml
@@ -6,19 +6,19 @@ workflows:
         name: React Native App
         environment:
             vars:
-                XCODE_WORKSPACE: "hask"
-                XCODE_SCHEME: "hask"
+                XCODE_WORKSPACE: "{{ ADD WORKSPACE NAME HERE }}"
+                XCODE_SCHEME: "{{ ADD SCHEME NAME HERE }}"
             node: latest
         scripts:
             - npm install
             - echo "sdk.dir=$HOME/programs/android-sdk-macosx" > "$FCI_BUILD_DIR/android/local.properties"
             - |
                 # build Android
-                cd packages/husk/android
+                cd packages/hask/android
                 ./gradlew assembleDebug
             - |
                 # build iOS
-                cd packages/husk/ios
+                cd packages/hask/ios
                 pod install
                 xcodebuild build -workspace "$XCODE_WORKSPACE.xcworkspace" -scheme "$XCODE_SCHEME" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO
         artifacts:
