--- a/.github/workflows/package-android-debug.yml
+++ b/.github/workflows/package-android-debug.yml
@@ -10,8 +10,7 @@ on:
 jobs:
   build-apk:
     runs-on: ubuntu-latest
-    container:
-      image: docker://fabernovel/android:api-29-v1.1.0
+    container: reactnativecommunity/react-native-android
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
@@ -22,8 +21,8 @@ jobs:
 
       - name: Changelog Generator
         run: | 
-          sudo apt update
-          sudo apt install wget curl -y
+          apt update
+          apt install wget curl -y
           curl -s https://api.github.com/repos/barelyhuman/commitlog/releases/latest \
           | grep browser_download_url \
           | grep linux-amd64 \
